-federation features -config generalization